--- a/src/pages/dashboard/home/admin/view-questions/Specific/tables.css
+++ b/src/pages/dashboard/home/admin/view-questions/Specific/tables.css
@@ -30,4 +30,11 @@
       margin: 0;
     }
   }
+
+  img {
+    max-width: 100%;
+    height: auto;
+    margin: 1rem 0;
+    border-radius: 4px;
+  }
 }
